log
Tue Mar 16 22:37:36 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:19: error: expected expression before ‘]’ token
   *suma = sumaN(a[],m);
                   ^
Compilation failed
Tue Mar 16 22:38:00 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:20: error: expected expression before ‘]’ token
   *suma = sumaN(a[ ],m);
                    ^
Compilation failed
Tue Mar 16 22:38:05 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
3dab0ae
Tue Mar 16 22:38:32 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
f96d8ea
Tue Mar 16 22:38:57 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
48b6cbb
Tue Mar 16 22:39:27 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
454ee5e
Tue Mar 16 22:42:21 UTC 2021: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1fb5c6b
Tue Mar 16 22:44:22 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
984e285
Tue Mar 16 22:45:21 UTC 2021: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|6
total_score: 10/70
de63a37
Tue Mar 16 22:49:02 UTC 2021: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
d13d628
Tue Mar 16 22:49:39 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
5960028
Tue Mar 16 22:55:37 UTC 2021: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|6
total_score: 10/70
d897104
Tue Mar 16 22:58:09 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c023cc3
Tue Mar 16 22:59:49 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
519a2e7
Tue Mar 16 23:05:32 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
57d329c
Tue Mar 16 23:06:25 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
da33317
Tue Mar 16 23:08:13 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
696197c
Tue Mar 16 23:11:23 UTC 2021: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
a70af96
Tue Mar 16 23:11:44 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
77a9488
